--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,6 +4,10 @@
     padding:0;
 }
 
+
+html{
+    font-family: 'Roboto', sans-serif;
+}
 .container {
     position: relative;
     width: 1140px;
@@ -22,7 +26,6 @@
 }
 
 .logo .logo_text {
-    font-family: Roboto;
     font-size: 15px;
     font-weight: 500;
     text-transform: uppercase; /* верхний регистр */
@@ -36,9 +39,9 @@ h1 {
     margin-top: 53px;
 }
 .title{
-    font-family: "Roboto - Black";
+    /* font-family: 'Roboto Black', sans-serif; */
     font-size: 41px;
-    font-weight: 400;
+    font-weight: 900;
     text-transform: uppercase;
     text-align: center;
     color: #f9bf3b;
@@ -49,10 +52,9 @@ h2.title{
 }
 
 .simple .title_big{
-    
-    font-family: "Roboto - Black";
+
     font-size: 80px;
-    font-weight: 400;
+    font-weight: 900;
     text-transform: uppercase;
     text-align: center;
     color: #ffffff;
@@ -63,7 +65,6 @@ h2.title{
 
     padding: 0 13px;
     margin-top: 23px;
-    font-family: "Roboto Light";
     font-size: 21px;
     font-weight: 300;
     line-height: 28px;
@@ -72,7 +73,6 @@ h2.title{
 }
 
 .promo .promo_text span{
-    font-family: "Roboto - Bold";
     font-weight: 700;
     color: #f9bf3b;
 
@@ -89,7 +89,6 @@ h2.title{
     border: 4px solid rgba(0, 0, 0, 0.23);
     background-image: linear-gradient(to top, #2798b9 0%, #3ab6da 100%);
     text-shadow: -0.7px -0.7px 0 rgba(0, 0, 0, 0.22);
-    font-family: "Roboto Condensed";
     font-size: 21px;
     font-weight: 400;
     line-height: 24px;
@@ -105,9 +104,8 @@ h2.title{
 }
 
 .more .more_text{
-    font-family: "Roboto  - Thin";
     font-size: 15px;
-    font-weight: 400;
+    font-weight: 100;
     text-transform: uppercase;
     color: #ffffff;
     text-align: center;
@@ -128,7 +126,6 @@ h2.title{
 .waiting .waiting_header, .finish .finish_header{
     
     color: #252525;
-    font-family: Roboto;
     font-size: 30px;
     font-weight: 400;
     text-transform: uppercase;
@@ -148,7 +145,6 @@ h2.title{
 .waiting .waiting_subheader{
 
     color: #4a4a4a;
-    font-family: Roboto;
     font-size: 23px;
     font-weight: 400;   
     text-align: center;
@@ -173,7 +169,6 @@ h2.title{
 
 .waiting .waiting_wrapper .waiting_item .waiting_descr{
     margin-top:33px;
-    font-family: Roboto;
     font-size: 15px;
     font-weight: 300;
     line-height: 21px;
@@ -190,9 +185,8 @@ h2.title{
 .optimization .optimization_header{    
 
     margin-left: 391px;
-    font-family: "Roboto - Black";
     font-size: 30px;
-    font-weight: 400;
+    font-weight: 900;
     text-transform: uppercase;
     color: #299cbd;
 }
@@ -202,15 +196,12 @@ h2.title{
     margin-top: 25px;
     margin-left: 391px;
     font-size: 17px;
-    font-weight: 300;
     line-height: 27px;
-    font-family: "Roboto Light";
     font-weight: 300;
     color: #4a4a4a;
 }
 
 .optimization .optimization_text span{
-    font-family: "Roboto - Bold";
     font-weight: 700;
 }
 
@@ -255,7 +246,6 @@ h2.title{
 .finish .finish_wrapper .finish_item .finish_descr{
     margin-top:25px;
     text-align:center;
-    font-family: Roboto;
     font-size: 17px;
     font-weight: 300;
     text-align: center;
@@ -277,7 +267,7 @@ h2.title{
 .gift .gift_text{
     margin-top: 32px;
     color:#252525;
-    font-family: Roboto-Regular;
+    font-weight: 400;
     font-size:30px;
     text-align:center;
 }
@@ -301,7 +291,7 @@ h2.title{
 
     margin-top: 28px;
     color:#252525;
-    font-family:Roboto-Regular;
+    font-weight:400;
     font-size:30px;
     text-transform: uppercase;
 }
@@ -309,7 +299,7 @@ h2.title{
 .first .first_date{
     margin-top: 23px;
     color:#299CBD;
-    font-family:Roboto-Black;
+    font-weight: 900;
     font-size:36px;
     text-transform: uppercase;
 }
@@ -317,7 +307,7 @@ h2.title{
 .first .first_text2{
     margin-top: 19px;
     color:#4A4A4A;
-    font-family:Roboto-Regular;
+    font-weight: 400;
     font-size:23px;
 }
 
